Fixed issue with Seed and Eligibility rating being switched.  Sized table width to prevent jumping of headers when rendering is completed.  Fixed failure to Enter the tournament due to inadequate authorization during tournament save.  Used count of entries as total entries regardless of whether the entries contain any event entries or not (incomplete).

--- a/client/src/app/tournament/tournament/tournament-players-list/tournament-players-list.component.scss
+++ b/client/src/app/tournament/tournament/tournament-players-list/tournament-players-list.component.scss
@@ -1,6 +1,7 @@
 th {
   &.header {
     text-align: left;
+    min-width: 275px;  // to keep it from jumping
   }
   &.header-line2 {
     text-align: right;
